Update encoding functions